manifests/booksapp/allow_ingress.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: ingress
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: webapp
  requiredAuthenticationRefs:
    - name: ingress
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
