manifests/booksapp/bookspol.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-webapp
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: webapp
  requiredAuthenticationRefs:
    - name: traffic
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-authors
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: authors
  requiredAuthenticationRefs:
    - name: webapp-books
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-books
  namespace: booksapp
  labels:
    app.kubernetes.io/part-of: booksapp
    project: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: books
  requiredAuthenticationRefs:
    - name: webapp-authors
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-viz
  namespace: booksapp
spec:
  targetRef:
    kind: Namespace
    name: booksapp
  requiredAuthenticationRefs:
    - name: linkerd-viz
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
